<resources>
    <string name="app_name">Workout App</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete Profile</string>
    <string name="title_main">Workout Planner</string>
    <string name="title_body">Body View</string>
    <string name="title_calendar">Calendar View</string>
    <string name="title_profile">My Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_new_goal">New Goal</string>
    <string name="welcome_back_msg">Welcome! Select your profile:</string>
    <string name="menu_option_reset">Reset</string>
    <string name="new_profile_name">Name</string>
    <string name="profile_name_default">Default</string>
    <string name="profile_date_default">mm/dd/yyyy</string>
    <string name="profile_goal_header">Goal Type</string>
    <string name="profile_goal_progress_header">Goal Progress</string>
    <string name="edit">Edit</string>
    <string name="profile_next_workout_header">Next Workout</string>
    <string name="default_val">Default</string>
    <string name="title_activity_body_rear">BodyRearActivity</string>
    <string name="title_activity_edit_goals">EditGoalsActivity</string>

    <string name="dialog_delete_profile">Are you sure you want to delete this profile?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="new_goal_date_default">MM/DD/YYYY</string>
    <string name="minus">-</string>
    <string name="plus">+</string>

    <string name="back">&lt;</string>
    <string name="forward">&gt;</string>

    <string name="error">Error</string>
    <string name="ok">OK</string>

    <string name="blahs">blah blah blah blah blah blah blah blah blah</string>
</resources>
