<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <RelativeLayout
        android:id="@+id/profile_header_block"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_header_height"
        >

        <RelativeLayout
            android:id="@+id/level_circle"
            android:layout_width="@dimen/level_circle_diameter"
            android:layout_height="@dimen/level_circle_diameter"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp">
            >

            <pablo.workoutapp.ProgressWheel
                android:id="@+id/level_wheel"
                android:layout_width="@dimen/level_circle_diameter"
                android:layout_height="@dimen/level_circle_diameter"
                android:layout_centerInParent="true"
                ProgressWheel:pwRimColor="@color/progressBackground"
                ProgressWheel:pwBarColor="@color/colorPrimaryDark"
                ProgressWheel:pwBarWidth="6dp"
                ProgressWheel:pwRimWidth="6dp"
                ProgressWheel:pwContourSize="0dp"
                ProgressWheel:pwContourColor="@android:color/transparent"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="2"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
            />

        </RelativeLayout>



        <TextView
            android:id="@+id/profile_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@id/level_circle"
            android:layout_toEndOf="@id/level_circle"
            android:text="@string/profile_name_default"
            android:textSize="22sp"
            />

        <TextView
            android:id="@+id/profile_start_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@id/level_circle"
            android:layout_toEndOf="@id/level_circle"
            android:layout_below="@id/profile_name"
            android:gravity="center_vertical"
            android:text="@string/profile_date_default"
            android:textSize="16sp"

            />

        <ImageButton
            android:id="@+id/edit_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="?android:colorBackground"
            android:src="@drawable/edit_icon_24dp"
            />


    </RelativeLayout>

    <View style="@style/Divider"
        android:layout_marginTop="@dimen/profile_divider_margin"
        android:layout_marginBottom="@dimen/profile_divider_margin"
        />

    <RelativeLayout
        android:id="@+id/profile_goal_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:id="@+id/profile_goal_type_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_goal_type_header"
                style="@style/ProfileHeader.Uncentered"
                android:text="@string/profile_goal_header"
                />

            <TextView
                android:id="@+id/profile_goal_type_value"
                style="@style/ProfileValue"
                />

        </LinearLayout>

        <ImageButton
            android:id="@+id/edit_goal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="?android:colorBackground"
            android:src="@drawable/edit_icon_24dp"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/profile_goal_progress_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/profile_goal_progress_header"
            android:text="@string/profile_goal_progress_header"
            style="@style/ProfileHeader.Centered"
            />

        <ProgressBar
            android:id="@+id/profile_goal_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="100"
            android:minHeight="30dp"
            android:minWidth="@dimen/goal_block_width"
            android:progress="10"
            android:progressBackgroundTint="#c4c4c4"
            android:progressTint="@color/colorPrimaryDark"
            android:outlineProvider="bounds"
            android:secondaryProgress="20"
            android:secondaryProgressTint="@color/colorPrimary"

            />

        <LinearLayout
            android:id="@+id/profile_goal_progress_value_header"
            android:layout_width="@dimen/goal_block_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Start"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Current"
                android:textSize="16sp"
                android:textStyle="bold"
            />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Target"
                android:textSize="16sp"
                android:textStyle="bold"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_goal_progress_values"
            android:layout_width="@dimen/goal_block_width"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Start"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Current"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Target"
                />
        </LinearLayout>

    </LinearLayout>

    <View style="@style/Divider"
        android:layout_marginTop="@dimen/profile_divider_margin"
        android:layout_marginBottom="@dimen/profile_divider_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_next_workout_header"
            android:text="@string/profile_next_workout_header"
            style="@style/ProfileHeader.Uncentered"
            />

        <TextView
            android:id="@+id/next_workout_date"
            android:text="@string/profile_date_default"
            style="@style/ProfileValue"
            />

        <Button
            android:id="@+id/plan_workout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Plan new workout"></Button>


    </LinearLayout>

</LinearLayout>
